/*******************************************************************************
 * Copyright (c) 2017 IBM Corporation and others.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License 2.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-2.0/
 * 
 * SPDX-License-Identifier: EPL-2.0
 *
 * Contributors:
 *     IBM Corporation - initial API and implementation
 *******************************************************************************/
test {
    dependsOn ':cnf:copyMavenLibs'
    jvmArgs '-Dcom.ibm.ws.ras.trace.specification=com.ibm.ws.threading.*=event=enabled'
}
tasks.withType(JavaCompile) {
    options.release = 21
}